--- a/lib/SYCL/CMakeLists.txt
+++ b/lib/SYCL/CMakeLists.txt
@@ -20,6 +20,7 @@ add_llvm_loadable_module( SYCL
   SYCLSerializeArgumentsInside.cpp
   inSPIRation.cpp
   remove_global_empty_cdtors.cpp
+  SYCLModifySPIRFuncName.cpp
 
   DEPENDS
   intrinsics_gen
