Modify SYCL pass name and add new function in SYCLKernel.cpp
Modify pass SYCLModifySPIRFuncName.cpp to SYCLCleanUpFuncName.cpp
Change SYCL function called by kernel names to have sycl_func_ prefix.
Add new function detecting call site is kernel function in
SYCLKernel.cpp
Other minor fixes for comments or indentation.

--- a/lib/SYCL/CMakeLists.txt
+++ b/lib/SYCL/CMakeLists.txt
@@ -20,7 +20,7 @@ add_llvm_loadable_module( SYCL
   SYCLSerializeArgumentsInside.cpp
   inSPIRation.cpp
   remove_global_empty_cdtors.cpp
-  SYCLModifySPIRFuncName.cpp
+  SYCLCleanUpFuncName.cpp
 
   DEPENDS
   intrinsics_gen
